--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,11 +5,21 @@ on:
     # 凌晨任务：北京时间每天 01:00（UTC 前一天 17:00）
     - cron: '0 17 * * *'
     # 早间任务：北京时间每天 05:00（UTC 前一天 21:00）
-    #- cron: '0 21 * * *'
+    - cron: '0 21 * * *'
     # 午间任务：北京时间每天 11:40（UTC 03:40）
-    #- cron: '40 3 * * *'
+    - cron: '40 3 * * *'
+    - cron: '10 4 * * *'
+    - cron: '20 5 * * *'
+    - cron: '30 6 * * *'
+    - cron: '40 7 * * *'
+    - cron: '50 8 * * *'
+    - cron: '10 9 * * *'
+    - cron: '20 10 * * *'
+    - cron: '30 11 * * *'
+    - cron: '40 12 * * *'
+    - cron: '50 13 * * *'
     # 晚间任务：北京时间每天 22:00（UTC 14:00）
-    #- cron: '0 14 * * *'
+    - cron: '0 14 * * *'
   workflow_dispatch:  # 手动触发
 
 jobs:
